Changed bootstrap3 to bt2, added js files, basic mockup.

--- a/index.html
+++ b/index.html
@@ -7,11 +7,96 @@
 		<meta name="author" content="Martin Kiesel 8787">
 		<link rel="shortcut icon" href="resources/images/favicon.ico">
 		<link rel="stylesheet" href="resources/css/bootstrap.css">
-		<link rel="stylesheet" href="resources/css/custom_style.css">
-		<script language="javascript" type="text/javascript" src="resources/js/jquery.js"></script>
-
+		<link rel="stylesheet" href="resources/css/custom-style.css">
+<!-- /*		<script language="javascript" type="text/javascript" src="resources/js/jquery.js"></script>
+		<script language="javascript" type="text/javascript" src="resources/js/bootstrap.js"></script>*/ -->
 		<title>TIA | Záverečné zadanie</title>
 	</head>
-	<body>			
+	<body>
+	    <!-- Part 1: Wrap all page content here -->
+	    <div id="wrap">
+	      <!-- Fixed navbar -->
+			<div class="navbar navbar-fixed-top">
+			  <div class="navbar-inner">
+			    <div class="container">
+			      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+			        <span class="icon-bar"></span> 
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			      </a>
+			      <div class="nav-collapse">
+			        <ul class="nav">
+		                <a class="brand" href="#">Present Ideas</a>
+		                <li class="active"><a href="#">Home</a></li>
+		                <li><a href="#">Blog</a></li>
+		                <li><a href="#">About</a></li>
+		                <li><a href="#">Help</a></li>
+		                <li class="dropdown" id="accountmenu">
+		                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Account Settings<b class="caret"></b></a>
+		                    <ul class="dropdown-menu">
+		                        <li><a href="#">Login</a></li>
+		                      	<li class="dropdown-submenu">
+		                          <a tabindex="-1" href="#">More options</a>
+		                          <ul class="dropdown-menu">
+		                            <li><a tabindex="-1" href="#">Second level</a></li>
+		                            <li class="dropdown-submenu">
+		                              <a href="#">More..</a>
+		                              <ul class="dropdown-menu">
+		                                  <li><a href="#">3rd level</a></li>
+		                                  <li><a href="#">3rd level</a></li>
+		                              </ul>
+		                            </li>
+		                            <li><a href="#">Second level</a></li>
+		                            <li><a href="#">Second level</a></li>
+		                          </ul>
+		                        </li>
+		                        <li><a href="#">Register</a></li>
+		                        <li class="divider"></li>
+		                        <li><a href="#">Logout</a></li>
+		                    </ul>
+		                </li>
+		            </ul>
+			        <ul class="nav pull-right"></ul>
+			      </div><!--/.nav-collapse -->
+			    </div>
+			  </div>
+			</div>
+	      <!-- Begin page content -->
+	      <div class="container">
+	        <div class="page-header">
+	          <h1>Sticky footer with fixed navbar</h1>
+	        </div>
+	        <p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added within <code>#wrap</code> with <code>padding-top: 60px;</code> on the <code>.container</code>.</p>
+	        <p>Back to <a href="./sticky-footer.html">the sticky footer</a> minus the navbar.</p>
+	      </div>
+
+	      <div id="push"></div>
+	    </div>
+
+	    <div id="footer">
+	      <div class="container">
+	        <p class="muted credit">Example courtesy <a href="http://martinbean.co.uk">Martin Bean</a> and <a href="http://ryanfait.com/sticky-footer/">Ryan Fait</a>.</p>
+	      </div>
+	    </div>
+
+	    <!-- Le javascript
+	    ================================================== -->
+	    <!-- Placed at the end of the document so the pages load faster -->
+	    <script src="resources/js/jquery.js"></script>
+	    <script src="resources/js/bootstrap-transition.js"></script>
+	    <script src="resources/js/bootstrap-alert.js"></script>
+	    <script src="resources/js/bootstrap-modal.js"></script>
+	    <script src="resources/js/bootstrap-dropdown.js"></script>
+	    <script src="resources/js/bootstrap-scrollspy.js"></script>
+	    <script src="resources/js/bootstrap-tab.js"></script>
+	    <script src="resources/js/bootstrap-tooltip.js"></script>
+	    <script src="resources/js/bootstrap-popover.js"></script>
+	    <script src="resources/js/bootstrap-button.js"></script>
+	    <script src="resources/js/bootstrap-collapse.js"></script>
+	    <script src="resources/js/bootstrap-carousel.js"></script>
+	    <script src="resources/js/bootstrap-typeahead.js"></script>
+
+	  
+
 	</body>
 </html>
