--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="description" content="TIA zaverecne zadanie">
 		<meta name="keywords" content="TIA, HTML5, CSS, JavaScript">
 		<meta name="author" content="Martin Kiesel 8787">
-		<link rel="shortcut icon" href="resources/images/favicon.ico">
+		<link rel="shortcut icon" href="resources/img/favicon.ico">
 		<link rel="stylesheet" href="resources/css/bootstrap.css">
 		<link rel="stylesheet" href="resources/css/custom-style.css">
 <!-- /*		<script language="javascript" type="text/javascript" src="resources/js/jquery.js"></script>
