Creating menu from json (array) added.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="description" content="TIA zaverecne zadanie">
 		<meta name="keywords" content="TIA, HTML5, CSS, JavaScript">
-		<meta name="author" content="Martin Kiesel 8787">
+		<meta name="author" content="Martin 8787">
 		<link rel="shortcut icon" href="resources/img/favicon.ico">
 		<link rel="stylesheet" href="resources/css/bootstrap.css">
 		<link rel="stylesheet" href="resources/css/custom-style.css">
@@ -26,28 +26,20 @@
 			      </a>
 			      <div class="nav-collapse">
 			        <ul class="nav">
-		                <a class="brand" href="#">Present Ideas</a>
+		                <a class="brand" href="#">Final assignment</a>
 		                <li class="active"><a href="#">Home</a></li>
 		                <li><a href="#">Blog</a></li>
 		                <li><a href="#">About</a></li>
 		                <li><a href="#">Help</a></li>
-		                <li class="dropdown" id="accountmenu">
-		                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Account Settings<b class="caret"></b></a>
+		                <li class="dropdown" id="gamemenu">
+		                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Games<b class="caret"></b></a>
 		                    <ul class="dropdown-menu">
-		                        <li><a href="#">Login</a></li>
 		                      	<li class="dropdown-submenu">
-		                          <a tabindex="-1" href="#">More options</a>
+		                          <a tabindex="-1" href="#">15-coins</a>
 		                          <ul class="dropdown-menu">
-		                            <li><a tabindex="-1" href="#">Second level</a></li>
-		                            <li class="dropdown-submenu">
-		                              <a href="#">More..</a>
-		                              <ul class="dropdown-menu">
-		                                  <li><a href="#">3rd level</a></li>
-		                                  <li><a href="#">3rd level</a></li>
-		                              </ul>
-		                            </li>
-		                            <li><a href="#">Second level</a></li>
-		                            <li><a href="#">Second level</a></li>
+		                            <li><a href="#">Play</a></li>
+		                            <li><a href="#">Graphs</a></li>
+		                            <li><a href="https://github.com/Kyslik/15-drobnych" target="_blank">Github</a></li>
 		                          </ul>
 		                        </li>
 		                        <li><a href="#">Register</a></li>
@@ -56,7 +48,7 @@
 		                    </ul>
 		                </li>
 		            </ul>
-			        <ul class="nav pull-right"></ul>
+			        <!-- <ul class="nav pull-right"></ul> -->
 			      </div><!--/.nav-collapse -->
 			    </div>
 			  </div>
@@ -75,12 +67,9 @@
 
 	    <div id="footer">
 	      <div class="container">
-	        <p class="muted credit">Example courtesy <a href="http://martinbean.co.uk">Martin Bean</a> and <a href="http://ryanfait.com/sticky-footer/">Ryan Fait</a>.</p>
+	        <p class="muted credit">TIA end project <a href="#">8787</a>, &copy; 2014.</p>
 	      </div>
 	    </div>
-
-	    <!-- Le javascript
-	    ================================================== -->
 	    <!-- Placed at the end of the document so the pages load faster -->
 	    <script src="resources/js/jquery.js"></script>
 	    <script src="resources/js/bootstrap-transition.js"></script>
@@ -95,8 +84,6 @@
 	    <script src="resources/js/bootstrap-collapse.js"></script>
 	    <script src="resources/js/bootstrap-carousel.js"></script>
 	    <script src="resources/js/bootstrap-typeahead.js"></script>
-
-	  
-
+	    <script src="resources/js/custom-script.js"></script>
 	</body>
 </html>
