Content changing added.

--- a/index.html
+++ b/index.html
@@ -26,27 +26,6 @@
 			      </a>
 			      <div class="nav-collapse">
 			        <ul class="nav">
-		                <a class="brand" href="#">Final assignment</a>
-		                <li class="active"><a href="#">Home</a></li>
-		                <li><a href="#">Blog</a></li>
-		                <li><a href="#">About</a></li>
-		                <li><a href="#">Help</a></li>
-		                <li class="dropdown" id="gamemenu">
-		                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Games<b class="caret"></b></a>
-		                    <ul class="dropdown-menu">
-		                      	<li class="dropdown-submenu">
-		                          <a tabindex="-1" href="#">15-coins</a>
-		                          <ul class="dropdown-menu">
-		                            <li><a href="#">Play</a></li>
-		                            <li><a href="#">Graphs</a></li>
-		                            <li><a href="https://github.com/Kyslik/15-drobnych" target="_blank">Github</a></li>
-		                          </ul>
-		                        </li>
-		                        <li><a href="#">Register</a></li>
-		                        <li class="divider"></li>
-		                        <li><a href="#">Logout</a></li>
-		                    </ul>
-		                </li>
 		            </ul>
 			        <!-- <ul class="nav pull-right"></ul> -->
 			      </div><!--/.nav-collapse -->
@@ -54,17 +33,12 @@
 			  </div>
 			</div>
 	      <!-- Begin page content -->
-	      <div class="container">
-	        <div class="page-header">
-	          <h1>Sticky footer with fixed navbar</h1>
-	        </div>
-	        <p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added within <code>#wrap</code> with <code>padding-top: 60px;</code> on the <code>.container</code>.</p>
-	        <p>Back to <a href="./sticky-footer.html">the sticky footer</a> minus the navbar.</p>
+	      <div id="main-container" class="container">
+
 	      </div>
 
 	      <div id="push"></div>
 	    </div>
-
 	    <div id="footer">
 	      <div class="container">
 	        <p class="muted credit">TIA end project <a href="#">8787</a>, &copy; 2014.</p>
