Basic breadcrumbs methods added.

--- a/index.html
+++ b/index.html
@@ -33,11 +33,18 @@
 			  </div>
 			</div>
 	      <!-- Begin page content -->
-	      <div id="main-container" class="container">
+	      	<div id="breadcrumb" class="container first-container">
+				<ul class="breadcrumb">
+					<li><a href="#">Home</a> <span class="divider">/</span></li>
+					<li><a href="#">Library</a> <span class="divider">/</span></li>
+					<li class="active">Data</li>
+				</ul>
+			</div>
+			<div id="main-container" class="container">
 
-	      </div>
+			</div>
 
-	      <div id="push"></div>
+			<div id="push"></div>
 	    </div>
 	    <div id="footer">
 	      <div class="container">
