Added last seen feature

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	    </div>
 	    <div id="footer">
 	      <div class="container">
-	        <p class="muted credit">TIA end project <a href="#">8787</a>, &copy; 2014.</p>
+	        <p><span class="muted credit text-left span6">TIA end project <a href="#">8787</a>. &copy; 2014.</span> <span class="span6 muted credit text-right">Last seen: <span class="label label-info" id="last-seen">21.06.03 - 14:25</span></span></p>
 	      </div>
 	    </div>
 	    <!-- Placed at the end of the document so the pages load faster -->
