Added times visited feature.

--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
 	      <!-- Begin page content -->
 	      	<div id="breadcrumb" class="container first-container">
 				<ul class="breadcrumb">
-					<li><a href="#">Home</a> <span class="divider">/</span></li>
-					<li><a href="#">Library</a> <span class="divider">/</span></li>
-					<li class="active">Data</li>
 				</ul>
 			</div>
 			<div id="main-container" class="container">
@@ -48,7 +45,7 @@
 	    </div>
 	    <div id="footer">
 	      <div class="container">
-	        <p><span class="muted credit text-left span6">TIA end project <a href="#">8787</a>. &copy; 2014.</span> <span class="span6 muted credit text-right">Last seen: <span class="label label-info" id="last-seen">21.06.03 - 14:25</span></span></p>
+	        <p><span class="muted credit text-left span6">TIA end project <a href="#">8787</a>. &copy; 2014.</span> <span class="span6 muted credit text-right">Last seen: <span class="label label-info" id="last-seen"></span> Times Visited: <span class="badge badge-info" id="access-count"></span> </span></p>
 	      </div>
 	    </div>
 	    <!-- Placed at the end of the document so the pages load faster -->
