--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	    </div>
 	    <div id="footer">
 	      <div class="container">
-	        <p><span class="muted credit text-left span6">TIA end project <a href="#">8787</a>. &copy; 2014.</span> <span class="span6 muted credit text-right">Last seen: <span class="label label-info" id="last-seen"></span> Times Visited: <span class="badge badge-info" id="access-count"></span> </span></p>
+	        <p><span class="muted credit text-left span6">TIA end project <a href="mailto:8787@is.stuba.sk">8787</a>. &copy; 2014.</span> <span class="span6 muted credit text-right">Last seen: <span class="label label-info" id="last-seen"></span> Times visited: <span class="badge badge-info" id="access-count"></span> </span></p>
 	      </div>
 	    </div>
 	    <!-- Placed at the end of the document so the pages load faster -->
