--- a/content/game-15-coins.html
+++ b/content/game-15-coins.html
@@ -1,5 +1,5 @@
 <div class="page-header">
   <h1>15 Coins</h1>
 </div>
-<iframe class="g15-coins" src="http://localhost/projects/game/"></iframe>
+<iframe class="g15-coins" src="http://tina.fei.stuba.sk/~xkiesel/game/"></iframe>
 <!-- http://tina.fei.stuba.sk/~xkiesel/game/ -->
