--- a/content/graph-15-coins.html
+++ b/content/graph-15-coins.html
@@ -1,4 +1,4 @@
 <div class="page-header">
   <h1>Graph for 15 Coins</h1>
 </div>
-<iframe class="g15-coins" src="http://localhost/projects/game/graph.html"></iframe>
+<iframe class="g15-coins" src="http://tina.fei.stuba.sk/~xkiesel/game/graph.html"></iframe>
