Last changes, home && contact.

--- a/content/contact.html
+++ b/content/contact.html
@@ -68,7 +68,7 @@
 			</tr>
 			<tr>
 				<td>Podstránky Contact a Home</td>
-				<td><p class="text-center"><i class="icon-remove"></i></p></td>
+				<td><p class="text-center"><i class="icon-ok"></i></p></td>
 				<td><p class="text-center"><i class="icon-remove"></i></p></td>
 				<td><p class="text-center"><i class="icon-ok"></i></p></td>
 			</tr>			
