--- a/content/home.html
+++ b/content/home.html
@@ -1,18 +1,20 @@
 <div class="page-header">
   <h1>Semestrálny projekt z predmetu TIA</h1>
 </div>
-<dl class="dl-horizontal">
-  <dt>Prednáša</dt>
-  <dd>Doc. Ing. Katarína Žáková, PhD.</dd>
-  <dt>Fakulta</dt>
-  <dd>Fakulta elektrotechniky a informatiky</dd>
-  <dt>Univerzita</dt>
-  <dd>Slovenská technická univerzita</dd>
-  <dt>Rozsah</dt>
-  <dd>prednáška 2 hod. týždenne, seminár	2 hod. týždenne</dd>
-  <dt>Počet kreditov</dt>
-  <dd>5</dd>
-</dl>
+<div class="well">
+  <dl class="dl-horizontal">
+    <dt>Prednáša</dt>
+    <dd>Doc. Ing. Katarína Žáková, PhD.</dd>
+    <dt>Fakulta</dt>
+    <dd>Fakulta elektrotechniky a informatiky</dd>
+    <dt>Univerzita</dt>
+    <dd>Slovenská technická univerzita</dd>
+    <dt>Rozsah</dt>
+    <dd>prednáška 2 hod. týždenne, seminár	2 hod. týždenne</dd>
+    <dt>Počet kreditov</dt>
+    <dd>5</dd>
+  </dl>
+</div>
 <p>Predmet Tvorba internetových aplikácií, ako už z názvu vyplýva, je zameraný na tvorbu WWW stránok. Úspešný abslovent predmetu by mal samostatne vedieť pripraviť podklady pre tvorbu WWW stránok, orientovať sa v štandardoch tvorby WWW stránky, vybrať si vhodný softvér na tvorbu web aplikácií a ohodnotiť kvalitu a dosah vytvorenej stránky.</p>
 <p class="lead">Počas semestra sa študent postupne učí programovať v jazykoch <code>HTML</code>, <code>CSS</code> a <code>JavaScript</code>.</p>
 <p>Začína sa s <code>HTML</code>, čo je značkový jazyk určený na vytváranie webových stránok, na ktorý sa naviaže <code>CSS</code>, ktorý sa stará o samotný vzhľad stránky. Na záver premetu sa preberá <code>JavaScript</code>, ktorým môžme na stránkach pridať určitú funkcionalitu. Každý týždeň sa odprednáša nová látka, na ktorú nadväzuje zadanie.</p>
